apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'jacoco'

sourceCompatibility = 23

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    options.compilerArgs += "--enable-preview"
}

dependencies {
    implementation project(':Triangle.AbstractMachine')
    implementation group: 'com.github.spullara.cli-parser', name: 'cli-parser', version: '1.1.5'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}

application {
    mainClass = 'Triangle.Compiler'
}

// allow access to programs for unit tests
sourceSets.test.resources.srcDir file("$rootDir/programs")

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}
